# code-scanner

./: .gitignore  .npmignore  Cargo.toml  README.md  code-scanner.yaml  package.json  report.html  report.md  run.js
.github/workflows/: publish.yml
code-scanner/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
code-scanner/npm/darwin-x64/: README.md  package.json
code-scanner/npm/linux-x64-gnu/: README.md
code-scanner/src/: lib.rs
code-scanner/src/cli/: commands.rs  mod.rs
code-scanner/src/config/: mod.rs
code-scanner/src/core/: parser.rs  types.rs
code-scanner/src/progress/: mod.rs
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build.ps1  build.sh
src/: html.rs  main.rs  markdown.rs  parser.rs  scanner.rs
src/cli/: args.rs  commands.rs
src/config/: loader.rs
src/core/: mod.rs  scanner.rs
src/reporters/: html.rs  markdown.rs  mod.rs
templates/: default-config.yaml  report.html
test_files/: test.rs  test2.rs
