[package]
name = "code-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
handlebars = "4.5"
syntect = "5.1"
serde_json = "1.0.133"